# python-final-project

./: .env  Dockerfile  README.md  app.py  docker-compose.yml  er diagram.drawio  pyproject.toml
database/: models.py
film_api/: __init__.py
film_api/blueprints/: api_endpoints.py  login.py  swagger_parsers.py
film_api/checkers/: base_checker.py  constrains.py  film_checker.py
film_api/database/: db_worker.py  models.py
film_api/tests/: test_base_checker.py  test_film_checker.py
nginx/: nginx.conf
